Fix Api Constants